Fixed build failure